@@ -10,6 +10,9 @@
    - stevesk@cvs.openbsd.org 2006/02/07 01:08:04
      [auth-rhosts.c includes.h]
      move #include <netgroup.h> out of includes.h; ok markus@
+   - stevesk@cvs.openbsd.org 2006/02/07 01:18:09
+     [includes.h ssh-agent.c ssh-keyscan.c sshconnect2.c]
+     move #include <sys/queue.h> out of includes.h; ok markus@
 
 20060313
  - (dtucker) [configure.ac] Bug #1171: Don't use printf("%lld", longlong)
@@ -3911,4 +3914,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4142 2006/03/15 00:08:02 djm Exp $
+$Id: ChangeLog,v 1.4143 2006/03/15 00:09:42 djm Exp $
